--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,3 @@
-/* style.css */
 * {
   margin: 0;
   padding: 0;
@@ -168,5 +167,18 @@ button:hover {
   
   button {
       padding: 12px 20px;
+  }
+}
+.cursor {
+  display: inline-block;
+  width: 1px;
+  background-color: black;
+  animation: blink 1s step-start infinite;
+  margin-left: 2px;
+}
+
+@keyframes blink {
+  50% {
+    opacity: 0;
   }
 }
